# storage/api-docs/api-docs.json
@@ -135,7 +135,7 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "Category",
+                "summary": "Category Store",
                 "operationId": "Category",
                 "parameters": [
                     {
@@ -222,7 +222,12 @@
                     "403": {
                         "description": "Forbidden"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -255,7 +260,12 @@
                             "application/json": {}
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -292,7 +302,12 @@
                     "403": {
                         "description": "Forbidden"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
             }
         }
     },
